--- a/style.css
+++ b/style.css
@@ -1,9 +1,27 @@
-body {
-    margin: 0px;
-    padding: 0px;
+@import url("https://fonts.googleapis.com/css2?family=Syncopate&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-header{
-    background-color: #600080;
-    margin: 0px;
+header {
+  background-color: #600080;
+}
+
+ul {
+  font-family: "Syncopate", sans-serif;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+li {
+  width: auto;
+  font-family: syncopate;
+  padding-left: 4px;
+  padding-right: 4px;
+  font-size: 40px;
 }
